Fixed the formatting of the experience section in the experience.md file, ensuring consistent use of headings and descriptions for certifications. Updated the Hootsuite Academy and Six Sigma Global Institute sections to improve clarity and readability. Added missing headings and adjusted the text to maintain a uniform structure across all certifications. Added test projects, carousel, text into project.md.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -110,6 +110,19 @@ html, body {
     background: black; 
 }
 
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    width: 3rem;
+    height: 3rem;
+    background-size: 100% 100%;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    width: 6%;
+    min-width: 48px;
+}
+
 body::before {
     content: "";
     position: fixed;
